# SkillAttack

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: deploy-showcase.yml
agent_skill_redteam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
configs/: experiment.yaml  models.yaml  stages.yaml
core/: base.py  config_loader.py  env_loader.py  lane_workflow.py  llm_router.py  logger.py  run_guard.py  schemas.py  surface_protocol.py
data/hot100skills/: _clawhub_hot100_manifest.json
docker/: openclaw-clean-base.Dockerfile
experiments/: __init__.py  case_loader.py  common.py  compare_run.py  main_run.py
prompts/: analyzer_risk_type_remap.txt  attacker_upgraded.txt  judge.txt
prompts/attacker_seed/: backdoors.txt  bias_manipulation.txt  data_destruction.txt  data_exfiltration.txt  dos_denial_of_service.txt  malware_ransomware.txt  phishing.txt  poisoning.txt
sandbox/: Dockerfile  agent_runner.py  runner.py  sandbox_wrapper.py
sandbox/openclaw/: README.md
scripts/: download_clawhub_hot100.py  rebuild_openclaw_clean_host.sh  summarize_runs.py  upload_results.py
showcase/: README.md  index.html
tests/: test_aig_native_api.py  test_aig_taxonomy.py  test_env_loader.py  test_feedback_logic.py  test_judge_logic.py  test_model_profile_env_resolution.py  test_openclaw_runtime_policies.py  test_pipeline_lane_scheduler.py  test_pipeline_smoke.py  test_run_guard_and_preflight.py  test_skillinject_comparison.py  test_surface_protocol.py  test_upgraded_attacker.py
(+134 files in other folders)
